Commodity Scheduling - Code Refactored
Incorporated XSD in the solver configuration.
Refactored the code.
	1) Removed nesting logic
	2) Removed acceptor and forager parameters from solver configuration
	3) Added comments to Incremental Score Calculator